# dotfiles

./: .aliases.sh  .function.zsh  .gitconfig  .gitignore  .gitignore_global  .tmux.conf  .zplugs  .zshenv  .zshrc  AGENTS.md  Brewfile  README.md  brew_install.sh  brew_install.zsh  explain.md  install.sh
.codex/: AGENTS.md
.config/: .p10k.zsh  starship.toml
.cursor/: README.md  install.zsh
.zsh_sessions/: 346A5DC1-CE37-4C5F-857F-4B66CE7F7251.history  346A5DC1-CE37-4C5F-857F-4B66CE7F7251.session  8A8F2FFC-CE39-4ECC-9E70-DE4A8DD7ABDF.history  8A8F2FFC-CE39-4ECC-9E70-DE4A8DD7ABDF.session
claude/: CLAUDE.md  install-llm-skills.zsh  link-shared-config.zsh  normalize-plugin-paths.zsh  settings.json  statusline-command.sh  statusline.sh
claude/skills-src/tools/stock-watch/scripts/: fetch.py  pyproject.toml
config/: starship.toml
docs/: testing.md
ghostty/: config  font.conf  keybindings.conf  theme.conf
git/: .gitconfig  apply_gitconfig.zsh
handy/: apply-settings.py  glossary.txt  ja_light_tidy.prompt.txt
karabiner/: .gitignore  karabiner.json
linux/: install.sh
macos/: apply_macos.zsh  com.snakashima.secure-input-watch.plist  com.snakashima.tcp-keepalive-tuning.plist  install.zsh  local.tcp-keepalive-tuning.plist  macos.sh  system.enviroment.plist
nvim/: lazy-lock.json
server/: README.md  bootstrap.zsh  cloud-init.yaml  install.zsh  keepalive.service  keepalive.timer  packages.txt  tmux.service
setup/: brew_install.sh  install.sh  install.sh.new  install.zsh  setup.zsh  test-tart.sh  util.zsh
test/: secure-input-watch.bats  server.bats  (+4 more)
(+213 files in other folders)
