[project]
name = "stock-watch-scripts"
version = "0.1.0"
description = "yfinance + analysis + PDF generation for stock-watch skill"
requires-python = ">=3.11"
dependencies = [
  "yfinance>=0.2.50",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "jinja2>=3.1.4",
  "weasyprint>=63.0",
  "markdown>=3.7",
  "pyyaml>=6.0.2",
  "notion-client>=2.2.1",
  "requests>=2.32.0",
]

[tool.uv]
package = false
